
### Storage

- New 'keyval+' combined keyval/map store type
- Performance improvements in internal archive stores
- Ability to use SQLite3 storage using LuaSQLite3 instead of LuaDBI

### Module API

- Config interface API can require that string values be picked from a provided set
- Acceptable interval can be specified for number options
- Method for parsing time periods / intervals from config

## Changes

- Support sub-second precision timestamps
- mod_blocklist: New option 'migrate_legacy_blocking' to disable migration from mod_privacy
- Moved all modules into the Lua namespace `prosody.`
- Forwarded header from RFC 7239 supported, disabled by default

## Removed

- Lua 5.1 support
- XEP-0090 support removed from mod_time

0.12.0
======

**2022-03-14**

## New

### Modules

-   mod_mimicking: Prevent address spoofing
-   mod_s2s_bidi: Bi-directional server-to-server (XEP-0288)
-   mod_external_services: generic XEP-0215 support
-   mod_turn_external: easy setup XEP-0215 for STUN+TURN
-   mod_http_file_share: File sharing via HTTP (XEP-0363)
-   mod_http_openmetrics for exposing metrics to stats collectors
-   mod_smacks: Stream management and resumption (XEP-0198)
-   mod_auth_ldap: LDAP authentication
-   mod_cron: One module to rule all the periodic tasks
-   mod_admin_shell: New home of the Console admin interface
-   mod_admin_socket: Enable secure connections to the Console
-   mod_tombstones: Prevent registration of deleted accounts
-   mod_invites: Create and manage invites
-   mod_invites_register: Create accounts using invites
-   mod_invites_adhoc: Create invites via AdHoc command
-   mod_bookmarks: Synchronise open rooms between clients

### Security and authentication

-   SNI support (including automatic certificate selection)
-   ALPN support in mod_net_multiplex
-   DANE support in low-level network layer
-   Direct TLS support (c2s and s2s)
-   SCRAM-SHA-256
-   Direct TLS (including https) certificates updated on reload