@@ -75,6 +75,7 @@ files["plugins/"] = {
 		"module.get_option_boolean",
 		"module.get_option_enum",
 		"module.get_option_inherited_set",
+		"module.get_option_integer",
 		"module.get_option_number",
 		"module.get_option_path",
 		"module.get_option_period",
