@@ -43,6 +43,7 @@ TRUNK
 - Config interface API can require that string values be picked from a provided set
 - Acceptable interval can be specified for number options
 - Method for parsing time periods / intervals from config
+- Method for retrieving integer settings from config
 
 ## Changes
 
